package PraktikumPBO.Sesi12;

public interface Bonus {
    
    double hitungBonus(double performanceScore);
}
